[package]
name = "mxa"
version = "0.1.0"
edition = "2024"
authors = ["Koi to Coco <admin@koito.fun>"]

[dependencies]
common = { path = "../common" }
anyhow = "1.0.86"
futures-util = "0.3.30"
log = "0.4"
reqwest = { version = "0.12.5", features = [
  "rustls-tls",
  "rustls-tls-webpki-roots",
  "rustls-tls-native-roots",
  "gzip",
  "brotli",
  "zstd",
  "deflate",
  "stream",
], default-features = false }
serde = { version = "1.0.206", features = ["derive"] }
serde_json = "1.0.124"
tokio = { version = "1.39.2", features = [
  "process",
  "rt",
  "macros",
  "rt-multi-thread",
] }
tokio-tungstenite = "0.23.1"
simple_logger = "5.0.0"
xxhash-rust = { version = "0.8.15", features = ["xxh3"] }
rand = "0.9.0"
