[package]
name = "mxa"
version = "0.1.0"
edition = "2024"
authors = ["Koi to Coco <admin@koito.fun>"]

[dependencies]
common = { path = "../common" }
anyhow = "1.0.86"
futures-util = "0.3.30"
log = "0.4"
tokio = { version = "1.39.2", features = ["process", "rt", "macros", "rt-multi-thread", "signal"] }
tokio-tungstenite = "0.23.1"
rand = "0.9.0"
clap = { version = "4.5.37", features = ["derive", "env"] }

[target.'cfg(target_os = "linux")'.dependencies]
nix = { version = "0.29.0", features = ["user", "signal"] }
