[package]
name = "mxc"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.97"
clap = { version = "4.5.32", features = ["cargo", "derive"] }
log = "0.4.26"
reqwest = { version = "0.12.13", default-features = false }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
simple_logger = "5.0.0"
