[package]
name = "mxd"
version = "0.1.0"
edition = "2024"
authors = ["Koi to Coco <admin@koito.fun>"]

[dependencies]
common = { path = "../common" }
axum = { version = "0.8.1", features = ["ws"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tokio = { version = "1.44.0", features = ["sync", "rt-multi-thread", "signal"] }
anyhow = "1.0.97"
log = "0.4.26"
tokio-util = { version = "0.7.13", features = ["io"] }
if-addrs = "0.13.3"
rand = "0.9.0"
futures-util = "0.3.31"
tower-http = { version = "0.6.2", features = ["fs"] }
clap = { version = "4.5.35", features = ["derive", "env"] }
url = "2.5.4"
http-range-header = "0.4.2"
httpdate = "1.0.3"
rcgen = { git = "https://github.com/koitococo/rcgen.git", branch = "v0.13.2", features = [
  "x509-parser", "pem", "crypto", "ring"
], default-features = false }
rustls-pemfile = { version = "2.2.0", default-features = false }
time = "0.3.41"
futures = "0.3.31"
tokio-rustls = { version = "0.26.2", features = ["ring"], default-features = false}
